// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreHistory history renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScoreHistory
    history={
        Array [
            Object {
              "computer": 2,
              "outcome": "draw",
              "player": 2,
            },
            Object {
              "computer": 2,
              "outcome": "win",
              "player": 3,
            },
            Object {
              "computer": 2,
              "outcome": "loss",
              "player": 1,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="ScoreHistory__title"
>
          Game History:
</h1>,
        <table
          className="ScoreHistory__list"
>
          <tbody>
                    <tr>
                              <td>
                                        3
                              </td>
                              <td>
                                        Paper
                              </td>
                              <td>
                                        Draw
                              </td>
                              <td>
                                        Paper
                              </td>
                    </tr>
                    <tr>
                              <td>
                                        2
                              </td>
                              <td>
                                        Scissors
                              </td>
                              <td>
                                        Win
                              </td>
                              <td>
                                        Paper
                              </td>
                    </tr>
                    <tr>
                              <td>
                                        1
                              </td>
                              <td>
                                        Rock
                              </td>
                              <td>
                                        Lose
                              </td>
                              <td>
                                        Paper
                              </td>
                    </tr>
          </tbody>
</table>,
      ],
      "className": "ScoreHistory",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Game History:",
          "className": "ScoreHistory__title",
        },
        "ref": null,
        "rendered": "Game History:",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <tbody>
            <tr>
                        <td>
                                    3
                        </td>
                        <td>
                                    Paper
                        </td>
                        <td>
                                    Draw
                        </td>
                        <td>
                                    Paper
                        </td>
            </tr>
            <tr>
                        <td>
                                    2
                        </td>
                        <td>
                                    Scissors
                        </td>
                        <td>
                                    Win
                        </td>
                        <td>
                                    Paper
                        </td>
            </tr>
            <tr>
                        <td>
                                    1
                        </td>
                        <td>
                                    Rock
                        </td>
                        <td>
                                    Lose
                        </td>
                        <td>
                                    Paper
                        </td>
            </tr>
</tbody>,
          "className": "ScoreHistory__list",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <tr>
                <td>
                                3
                </td>
                <td>
                                Paper
                </td>
                <td>
                                Draw
                </td>
                <td>
                                Paper
                </td>
</tr>,
              <tr>
                <td>
                                2
                </td>
                <td>
                                Scissors
                </td>
                <td>
                                Win
                </td>
                <td>
                                Paper
                </td>
</tr>,
              <tr>
                <td>
                                1
                </td>
                <td>
                                Rock
                </td>
                <td>
                                Lose
                </td>
                <td>
                                Paper
                </td>
</tr>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <td>
                    3
</td>,
                  <td>
                    Paper
</td>,
                  <td>
                    Draw
</td>,
                  <td>
                    Paper
</td>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 3,
                  },
                  "ref": null,
                  "rendered": 3,
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Paper",
                  },
                  "ref": null,
                  "rendered": "Paper",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Draw",
                  },
                  "ref": null,
                  "rendered": "Draw",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Paper",
                  },
                  "ref": null,
                  "rendered": "Paper",
                  "type": "td",
                },
              ],
              "type": "tr",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <td>
                    2
</td>,
                  <td>
                    Scissors
</td>,
                  <td>
                    Win
</td>,
                  <td>
                    Paper
</td>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 2,
                  },
                  "ref": null,
                  "rendered": 2,
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Scissors",
                  },
                  "ref": null,
                  "rendered": "Scissors",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Win",
                  },
                  "ref": null,
                  "rendered": "Win",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Paper",
                  },
                  "ref": null,
                  "rendered": "Paper",
                  "type": "td",
                },
              ],
              "type": "tr",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <td>
                    1
</td>,
                  <td>
                    Rock
</td>,
                  <td>
                    Lose
</td>,
                  <td>
                    Paper
</td>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 1,
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Rock",
                  },
                  "ref": null,
                  "rendered": "Rock",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Lose",
                  },
                  "ref": null,
                  "rendered": "Lose",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Paper",
                  },
                  "ref": null,
                  "rendered": "Paper",
                  "type": "td",
                },
              ],
              "type": "tr",
            },
          ],
          "type": "tbody",
        },
        "type": "table",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="ScoreHistory__title"
>
            Game History:
</h1>,
          <table
            className="ScoreHistory__list"
>
            <tbody>
                        <tr>
                                    <td>
                                                3
                                    </td>
                                    <td>
                                                Paper
                                    </td>
                                    <td>
                                                Draw
                                    </td>
                                    <td>
                                                Paper
                                    </td>
                        </tr>
                        <tr>
                                    <td>
                                                2
                                    </td>
                                    <td>
                                                Scissors
                                    </td>
                                    <td>
                                                Win
                                    </td>
                                    <td>
                                                Paper
                                    </td>
                        </tr>
                        <tr>
                                    <td>
                                                1
                                    </td>
                                    <td>
                                                Rock
                                    </td>
                                    <td>
                                                Lose
                                    </td>
                                    <td>
                                                Paper
                                    </td>
                        </tr>
            </tbody>
</table>,
        ],
        "className": "ScoreHistory",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Game History:",
            "className": "ScoreHistory__title",
          },
          "ref": null,
          "rendered": "Game History:",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tbody>
              <tr>
                            <td>
                                          3
                            </td>
                            <td>
                                          Paper
                            </td>
                            <td>
                                          Draw
                            </td>
                            <td>
                                          Paper
                            </td>
              </tr>
              <tr>
                            <td>
                                          2
                            </td>
                            <td>
                                          Scissors
                            </td>
                            <td>
                                          Win
                            </td>
                            <td>
                                          Paper
                            </td>
              </tr>
              <tr>
                            <td>
                                          1
                            </td>
                            <td>
                                          Rock
                            </td>
                            <td>
                                          Lose
                            </td>
                            <td>
                                          Paper
                            </td>
              </tr>
</tbody>,
            "className": "ScoreHistory__list",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <td>
                                    3
                  </td>
                  <td>
                                    Paper
                  </td>
                  <td>
                                    Draw
                  </td>
                  <td>
                                    Paper
                  </td>
</tr>,
                <tr>
                  <td>
                                    2
                  </td>
                  <td>
                                    Scissors
                  </td>
                  <td>
                                    Win
                  </td>
                  <td>
                                    Paper
                  </td>
</tr>,
                <tr>
                  <td>
                                    1
                  </td>
                  <td>
                                    Rock
                  </td>
                  <td>
                                    Lose
                  </td>
                  <td>
                                    Paper
                  </td>
</tr>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      3
</td>,
                    <td>
                      Paper
</td>,
                    <td>
                      Draw
</td>,
                    <td>
                      Paper
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 3,
                    },
                    "ref": null,
                    "rendered": 3,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Paper",
                    },
                    "ref": null,
                    "rendered": "Paper",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Draw",
                    },
                    "ref": null,
                    "rendered": "Draw",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Paper",
                    },
                    "ref": null,
                    "rendered": "Paper",
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      2
</td>,
                    <td>
                      Scissors
</td>,
                    <td>
                      Win
</td>,
                    <td>
                      Paper
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 2,
                    },
                    "ref": null,
                    "rendered": 2,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Scissors",
                    },
                    "ref": null,
                    "rendered": "Scissors",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Win",
                    },
                    "ref": null,
                    "rendered": "Win",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Paper",
                    },
                    "ref": null,
                    "rendered": "Paper",
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      1
</td>,
                    <td>
                      Rock
</td>,
                    <td>
                      Lose
</td>,
                    <td>
                      Paper
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Rock",
                    },
                    "ref": null,
                    "rendered": "Rock",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Lose",
                    },
                    "ref": null,
                    "rendered": "Lose",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Paper",
                    },
                    "ref": null,
                    "rendered": "Paper",
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
          "type": "table",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`ScoreHistory no history renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScoreHistory
    history={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="ScoreHistory__title"
>
          Game History:
</h1>,
        <div
          className="ScoreHistory__noGames"
>
          (no games played)
</div>,
      ],
      "className": "ScoreHistory",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Game History:",
          "className": "ScoreHistory__title",
        },
        "ref": null,
        "rendered": "Game History:",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "(no games played)",
          "className": "ScoreHistory__noGames",
        },
        "ref": null,
        "rendered": "(no games played)",
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="ScoreHistory__title"
>
            Game History:
</h1>,
          <div
            className="ScoreHistory__noGames"
>
            (no games played)
</div>,
        ],
        "className": "ScoreHistory",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Game History:",
            "className": "ScoreHistory__title",
          },
          "ref": null,
          "rendered": "Game History:",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "(no games played)",
            "className": "ScoreHistory__noGames",
          },
          "ref": null,
          "rendered": "(no games played)",
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
